--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,14 +2,17 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: smashing-healthchecks-widget
+  description: Smashing widget
   links:
     - url: https://dashboard.example.com
       title: My Dashboard
       icon: dashboard
+  tags:
+    - smashing-healthchecks-widget
+    - ruby
   annotations:
-    backstage.io/techdocs-ref: value
-    github.com/project-slug: merou/smashing-healthchecks-widget
-
+    'github.com/project-slug': 'merou/smashing-healthchecks-widget'
+    'backstage.io/techdocs-ref': dir:.
 spec:
   type: other
   lifecycle: unknown
